--- a/trunk/catalog-model/pom.xml
+++ b/trunk/catalog-model/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>claro</groupId>
-	<artifactId>catalog-model</artifactId>
+	<artifactId>catalog-server</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>Claro Catalog Model</name>
+	<name>Claro Catalog Server</name>
 	<inceptionYear>2010</inceptionYear>
 	<properties>
     <maven.compiler.source>1.6</maven.compiler.source>
