--- a/trunk/catalog-model/pom.xml
+++ b/trunk/catalog-model/pom.xml
@@ -15,6 +15,7 @@
 	  <repository>
 	     <id>EclipseLink Repo</id>
 	     <url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo</url>
+	     <snapshots><enabled>true</enabled></snapshots>
 	  </repository>    
 		<repository>
 		  <id>scala-tools.org</id>
@@ -38,7 +39,8 @@
 		<dependency>
 	    <groupId>org.eclipse.persistence</groupId>
 	    <artifactId>eclipselink</artifactId>
-	    <version>2.1.1</version>
+	    <!-- Version 2.2.0 fixes an important isNull bug -->
+	    <version>2.2.0-SNAPSHOT</version>
 	  </dependency>
 		<dependency>
 		    <groupId>postgresql</groupId>
