--- a/trunk/DemoWebshop/pom.xml
+++ b/trunk/DemoWebshop/pom.xml
@@ -8,8 +8,7 @@
   <name>Demo Webshop</name>
   <inceptionYear>2010</inceptionYear>
   <properties>
-    <scala.version>2.8.1.RC1</scala.version>
-    <lift.version>2.0-scala280-SNAPSHOT</lift.version>
+    <scala.version>2.8.1</scala.version>
   </properties>
 
   <dependencies>
@@ -24,12 +23,19 @@
       <version>4.5</version>
       <scope>test</scope>
     </dependency>
+    <!-- 
     <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>jetty</artifactId>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-distribution</artifactId>
       <version>[6.1.6,)</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	    <groupId>postgresql</groupId>
+	    <artifactId>postgresql</artifactId>
+	    <version>9.0-801.jdbc4</version>
+	</dependency>
+     -->
   </dependencies>
 
   <build>
