--- a/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/website.config
+++ b/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/website.config
@@ -5,9 +5,10 @@ website.locales=en,de,es
 website.components=claro.cms.webshop.WebshopComponent,claro.cms.catalog.CatalogComponent
 
 entitymanager.eclipselink.jdbc.driver = org.postgresql.Driver
-entitymanager.eclipselink.jdbc.url = jdbc:postgresql:postgres
+entitymanager.eclipselink.jdbc.url = jdbc:postgresql:catalog3
 entitymanager.eclipselink.jdbc.user = postgres
 entitymanager.eclipselink.jdbc.password = postgres
+entitymanager.eclipselink.logging.level=FINE
 
 mail.smtp.port=587
 mail.smtp.from=catalogxs@gmail.com
