--- a/trunk/TetterodeWebshop/pom.xml
+++ b/trunk/TetterodeWebshop/pom.xml
@@ -24,12 +24,14 @@
       <version>4.5</version>
       <scope>test</scope>
     </dependency>
+    <!-- 
     <dependency>
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>jetty</artifactId>
       <version>[6.1.6,)</version>
       <scope>test</scope>
     </dependency>
+     -->
   </dependencies>
 
   <build>
@@ -53,9 +55,13 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.16</version>
+		  <groupId>org.mortbay.jetty</groupId>
+		  <artifactId>jetty-maven-plugin</artifactId>
+		</plugin>
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-server</artifactId>
+        <version>7.3.0.v20110203</version>
         <configuration>
           <contextPath>/</contextPath>
           <scanIntervalSeconds>5</scanIntervalSeconds>
@@ -76,6 +82,7 @@
           <nosuffix>true</nosuffix>
         </configuration>
       </plugin>
+      <!-- 
 			<plugin>
 			        <groupId>org.mortbay.jetty</groupId>
 			        <artifactId>maven-jetty-plugin</artifactId>
@@ -106,6 +113,7 @@
 			                </execution>
 			        </executions>
 			</plugin>
+       -->
     </plugins>
   </build>
   <reporting>
