--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/website.config
@@ -5,7 +5,7 @@ website.locales=en,de,es
 website.components=claro.cms.webshop.WebshopComponent,claro.cms.catalog.CatalogComponent
 
 entitymanager.eclipselink.jdbc.driver = org.postgresql.Driver
-entitymanager.eclipselink.jdbc.url = jdbc:postgresql:postgres
+entitymanager.eclipselink.jdbc.url = jdbc:postgresql:catalog3
 entitymanager.eclipselink.jdbc.user = postgres
 entitymanager.eclipselink.jdbc.password = postgres
 
