--- a/trunk/TetterodeWebshop/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/TetterodeWebshop/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,25 @@
 		<param-name>website</param-name>
 		<param-value>classpath:claro.tetterode.webshop.website</param-value>
 	</context-param>
+      <context-param>
+        <param-name>javax.persistence.jdbc.driver</param-name>
+        <param-value>org.postgresql.Driver</param-value>
+      </context-param>
+      <context-param>
+        <param-name>javax.persistence.jdbc.url</param-name>
+        <param-value>jdbc:postgresql:catalog3</param-value>
+      </context-param>
+      <context-param>
+        <param-name>javax.persistence.jdbc.user</param-name>
+        <param-value>postgres</param-value>
+      </context-param>
+      <context-param>
+        <param-name>javax.persistence.jdbc.password</param-name>
+        <param-value>postgres</param-value>
+      </context-param>
+      <context-param>
+        <param-name>eclipselink.cache.shared.default</param-name>
+        <param-value>false</param-value>
+      </context-param>
+      
 </web-app>
