--- a/trunk/catalog-manager/war/WEB-INF/web.xml
+++ b/trunk/catalog-manager/war/WEB-INF/web.xml
@@ -12,6 +12,7 @@
       </init-param>
       <init-param>
         <param-name>javax.persistence.jdbc.url</param-name>
+<!--         <param-value>jdbc:postgresql://localhost:15432/catalog3</param-value> -->
         <param-value>jdbc:postgresql:catalog3</param-value>
       </init-param>
       <init-param>
